# python-explorer

./: .gitignore  LICENSE  README.md  README_basic.md  __init__.py  app.py  render.yaml  render.yml  requirements.txt  setup.cfg
pythonexplorer/: app.py  explore.py  standards_310.txt
pythonexplorer/data/: 3_9.txt
source/: pyexplorer.py
src/: app.py
src/assets/: app_packs.txt  common_packs.txt  standard_packs_310.txt
src/core/: __init__.py  apptest.py  explore.py
src/layouts/: __init__.py  body_left.py  body_right_cyto.py  body_right_members.py  cyto_utils.py  drawer.py  header.py  layout_utils.py  main_page.py  stores.py
src/python_explorer/: __init__.py  app.py
src/python_explorer/cli/: __init__.py
src/python_explorer/layouts/: __init__.py  body_left.py  body_right_cyto.py  body_right_members.py  cyto_utils.py  header.py  layout_utils.py  main_page.py  stores.py
src/python_explorer/utils/: app.py  callbacks.py  envdata.py  explore.py
src/utils/: callbacks.py  envdata.py  explore.py  packagelist.py
static/: app_packs.txt  common_packs.txt
