[metadata]
name = python_explorer
version = 0.1.4
author = Seth M. Nelson
author_email = murrson@gmail.com
url = https://github.com/nelsonseth/python-explorer
description = A python environment exploration interface
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    dash == 2.13.0
    dash-bootstrap-components == 1.4.2
    dash-cytoscape == 0.3.0
    dash-extensions == 1.0.3
    dash-iconify == 0.1.2
    dash-mantine-components == 0.12.1
    gunicorn == 21.2.0
    pypandoc-binary == 1.11

[options.packages.find]
where=src