[metadata]
name = python_explorer
version = 0.1.6
author = Seth M. Nelson
author_email = murrson@gmail.com
url = https://github.com/nelsonseth/python-explorer
description = A python environment exploration interface
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    dash 
    dash-bootstrap-components 
    dash-cytoscape 
    dash-extensions 
    dash-iconify 
    dash-mantine-components 
    pypandoc-binary 
    waitress 

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    python-explorer = python_explorer.cli:run_explore