[metadata]
name = python_explorer
version = attr: python_explorer.__version__
author = Seth M. Nelson
author_email = murrson@gmail.com
url = https://github.com/nelsonseth/python-explorer
description = A python environment exploration interface
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.10
install_requires =
    dash >= 2.11.1
    dash-bootstrap-components >= 1.4.1
    dash-cytoscape >= 0.3.0
    dash-extensions >= 1.0.3
    dash-iconify >= 0.1.2
    dash-mantine-components >= 0.12.1
    pypandoc-binary >= 1.11
    waitress >= 2.0.0

[options.packages.find]
where=src

[options.package_data]
python_explorer.assets = 
    *.css

[options.entry_points]
console_scripts =
    python-explorer = python_explorer.cli:run_explore